<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ponomarevss.myweatherapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_main"/>

    <fragment
        android:id="@+id/nav_place"
        android:name="com.ponomarevss.myweatherapp.ui.place.PlaceFragment"
        android:label="@string/menu_place"
        tools:layout="@layout/fragment_place"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.ponomarevss.myweatherapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.ponomarevss.myweatherapp.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history"/>

</navigation>