<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="false"
        android:contentDescription="@string/background"
        android:focusable="false"
        android:scaleType="centerCrop"
        android:visibility="gone"
        tools:srcCompat="@drawable/ci_yekaterinburg"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_part_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"

                    android:shadowColor="@color/colorBlack"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHighlight="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="25sp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/coordinates_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/place"
                    tools:layout_height="15dp"
                    tools:layout_width="200dp" />

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="@dimen/image_size_big"
                    android:layout_height="@dimen/image_size_big"
                    android:layout_marginTop="@dimen/margin_small"
                    android:contentDescription="@string/partly_cloudy"
                    app:layout_constraintEnd_toStartOf="@+id/temperature_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/coordinates_layout" />

                <TextView
                    android:id="@+id/temperature_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:shadowColor="@color/colorBlack"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textColorHighlight="@color/colorBlack"
                    android:textStyle="bold"

                    android:textSize="@dimen/text_size_big"
                    app:layout_constraintEnd_toStartOf="@+id/temperature_unit"
                    app:layout_constraintTop_toTopOf="@+id/weather_icon" />

                <TextView
                    android:id="@+id/temperature_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_big"
                    android:layout_marginEnd="@dimen/margin_normal"

                    android:shadowColor="@color/colorBlack"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textColorHighlight="@color/colorBlack"
                    android:textStyle="bold"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/temperature_value" />

                <TextView
                    android:id="@+id/weather_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/colorBlack"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textColorHighlight="@color/colorBlack"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/temperature_unit"
                    app:layout_constraintTop_toBottomOf="@+id/temperature_value"
                    tools:layout_height="20dp"
                    tools:layout_width="150dp" />

                <LinearLayout
                    android:id="@+id/temperature_details_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="@+id/temperature_unit"
                    app:layout_constraintTop_toBottomOf="@+id/weather_description"
                    tools:layout_height="70dp"
                    tools:layout_width="70dp" />

                <LinearLayout
                    android:id="@+id/pressure_humidity_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temperature_details_layout"
                    tools:layout_height="50dp"
                    tools:layout_width="200dp" />

                <LinearLayout
                    android:id="@+id/visibility_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pressure_humidity_layout"
                    tools:layout_height="25dp"
                    tools:layout_width="200dp" />

                <LinearLayout
                    android:id="@+id/wind_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/visibility_layout"
                    tools:layout_height="40dp"
                    tools:layout_width="200dp" />

                <LinearLayout
                    android:id="@+id/sun_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wind_layout"
                    tools:layout_height="40dp"
                    tools:layout_width="200dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/misc_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/more_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_info"
                    android:visibility="gone"

                    android:shadowColor="@color/colorBlack"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textColorHighlight="@color/colorBlack"
                    android:textStyle="bold"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.9"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>

